# AdventOfCode

./: .gitignore
2018/: .eslintrc.js  package.json
2022/: Makefile  Package.swift  setup.sh
2024/rust/: Cargo.toml  day-01.bench.txt  day-02.bench.txt  day-03.bench.txt  day-04.bench.txt  day-05.bench.txt  day-06.bench.txt  day-07.bench.txt  day-08.bench.txt  day-09.bench.txt  day-10.bench.txt  day-11.bench.txt  day-12.bench.txt  justfile
2024/rust/.cargo/: config.toml
2024/rust/aoc-common/: Cargo.toml
2024/rust/aoc-common/src/: common.rs  grid.rs  point.rs
2024/rust/daily-template/: Cargo.toml
2024/rust/day-01/: Cargo.toml
2024/rust/day-01/src/: common.rs  part1.rs  part2.rs
2024/rust/day-02/: Cargo.toml
2024/rust/day-02/src/: lib.rs  part1.rs  part2.rs
2024/rust/day-03/: Cargo.toml
2024/rust/day-03/src/: part1.rs  part2.rs  part2_nom.rs
2024/rust/day-04/: Cargo.toml
2024/rust/day-04/src/: part1.rs  part2.rs
2024/rust/day-05/: Cargo.toml
2024/rust/day-05/src/: part1.rs  part2.rs
2024/rust/day-06/: Cargo.toml
2024/rust/day-06/src/: part1.rs  part2.rs
2024/rust/day-07/: Cargo.toml
2024/rust/day-07/src/: part1.rs  part2.rs
2024/rust/day-08/: Cargo.toml
2024/rust/day-08/src/: part1.rs  part2.rs
2024/rust/day-09/: Cargo.toml
2024/rust/day-09/src/: common.rs  lib.rs  part1.rs  part2.rs
2024/rust/day-10/: Cargo.toml
2024/rust/day-10/src/: part1.rs  part2.rs
2024/rust/day-11/: Cargo.toml
2024/rust/day-11/src/: part1.rs  part2.rs
2024/rust/day-12/: Cargo.toml
2024/rust/day-12/src/: part1.rs  part2.rs
AOC/: Package.swift  (+3 more)
(+248 files in other folders)
