[workspace]
resolver = "2"

members = [ "aoc-common", "day-*"]
default-members = ["day-*"]

[workspace.dependencies]
divan = "0.1.17"
glam = "0.29.2"
itertools = "0.14.0"
miette = { version = "7.4", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
rayon = "1.10.0"
regex = "1.11.1"
rstest = "0.24.0"
rstest_reuse = "0.7.0"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
test-log = { version = "0.2.17", default-features = false, features = [
    "trace",
] }
aoc-common = { path = "aoc-common" }
